# ObserveAgents.ai

./: .env.example  .gitignore  .v0_start_backend.sh  BUILD_LOG_2026-06-03.md  DEVELOPMENT.md  Makefile  README.md  fix_prod_roles.py  render.staging.yaml  render.yaml  requirements.txt  reset_admin.py  run_8h.py  test_agent.py  test_agent_browser.js  test_agent_developer.py  vercel.json
ai_agent_inventory/: context.py  headers.py
alembic/: env.py
app/: agent_inventory.py  ai_asset_resolver.py  asset_discovery.py  asset_intelligence.py  assets.py  auth.py  budget.py  client.py  config.py  cost_intelligence.py  database.py  demo.py  demo_otel_seed.py  detection_rule_templates.py  detection_rules.py  gateway_control.py  genai_semconv.py  identity_resolver.py  main.py  migrate_orgs.py  models.py  notifications.py  openai_client.py  org_config.py  otel_attribute_mapping.py  otel_normalizer.py  otel_parser.py  otel_privacy.py  otel_reprocess.py  policy.py  pricing.py  pricing_registry.py  proxy_circuit.py  relationship_resolver.py  relationships.py  risk_processor.py  roles.py  runtime_events.py  runtime_security_intelligence.py  scanner.py  (+5 more)
dashboard/: index.html  package-lock.json  package.json  smoke_check.cjs  vite.config.js
docs/: NOTION_ARCHITECTURE.md  README.md  agentic_engineering_operating_model.md  agentic_payments_x402_observability_plan.md  ai_agent_detection_rules_alerts_design.md  ai_agent_runtime_security_intelligence.md  architecture.md  asset_intelligence.md  auto_instrumentation_first_discovery_plan.md  competitive_levelup_plan.md  create_first_agent_guide.md  customer-integration-guide.md  demo_seed_data.md  fake_customer_company_simulation_guide.md  gateway_control_center_architecture.md  otel_ingestion.md  (+25 more)
sdk/python/: README.md  pyproject.toml
sdk/python/observeagents/: __init__.py  anthropic.py  client.py  events.py  ids.py  openai.py  privacy.py
sdk/python/tests/: conftest.py  test_anthropic_wrapper.py  test_backend_acceptance.py  test_events.py  test_ids.py  test_openai_wrapper.py  test_privacy.py
(+220 files in other folders)
