[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "observeagents"
version = "0.1.0"
description = "ObserveAgents Python SDK — wrap your OpenAI client and send safe, content-free runtime events to the ObserveAgents platform."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "ObserveAgents" }]
keywords = ["ai", "agents", "observability", "openai", "runtime"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# Zero runtime dependencies by design: transport uses the standard library.
# The `openai` package is only needed by apps that call OpenAI (which is the point),
# and is imported lazily — so it is deliberately not a hard dependency.
dependencies = []

[project.urls]
Homepage = "https://www.observeagents.ai"

[tool.setuptools]
packages = ["observeagents"]
