[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "observeagents"
version = "0.2.0"
description = "ObserveAgents Python SDK — wrap your OpenAI or Anthropic client and send safe, content-free runtime events to the ObserveAgents platform."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "ObserveAgents" }]
keywords = ["ai", "agents", "observability", "openai", "anthropic", "runtime"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# Zero runtime dependencies by design: transport uses the standard library.
# The `openai` / `anthropic` packages are only needed by apps that call those
# providers (which is the point), and are imported lazily — so neither is a
# hard dependency here.
dependencies = []

[project.urls]
Homepage = "https://www.observeagents.ai"

[tool.setuptools]
packages = ["observeagents"]
